change button background

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ div.button {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #ecfdce;
+    background-color: #ffffff;
 }
 
 .changeColor {
