--- a/style.css
+++ b/style.css
@@ -442,7 +442,7 @@ button.move {
         right: auto;
         top: 0;
         bottom: 0;
-
+        height: fit-content;
         margin: auto 0;
     }
     .palette .copy {
