--- a/style.css
+++ b/style.css
@@ -434,6 +434,7 @@ button.move {
         right: 5%;
         margin: auto 0;
         font-size: 1.2rem;
+        height: fit-content;
     }
     .palette span {
         font-size: 1.2rem;
@@ -453,6 +454,7 @@ button.move {
         bottom: 0;
         top: 0;
         color: #fff;
+        height: fit-content;
     }
     button.move {
         left: auto;
@@ -462,6 +464,7 @@ button.move {
         margin: auto;
         font-size: 1.2rem;
         transition: transform 0.1s ease-in-out;
+        height: fit-content;
     }
     label.colorInput {
         position: absolute;
