--- a/style.css
+++ b/style.css
@@ -405,7 +405,7 @@ button.move {
 
 @media (max-width: 950px) {
     body::-webkit-scrollbar {
-        /* display: none; */
+        display: none;
     }
     html,
     body {
